feat: early plugin mode + reflection fallback for dual auth (v1.1.19)
Add ClassTransformer-based early plugin that provides full bytecode
transformation without needing Instrumentation or JVM flags. Enables
singleplayer hosts to accept F2P players by simply dropping the JAR
in earlyplugins/. Also adds reflection-based fallback for plugin mode
when dynamic agent loading is unavailable. Updates docs with early
plugin setup guide and replaces hytale-f2p links with f2p-evo.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>